tests/NormalTests/paczka1/small_fuzzy/78371155.err
Error in line 1: 4Q1 A207 28,10
Error in line 9: 4Q1 S895 16,3
